# zugluft

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: RELEASING.md
.github/workflows/: nightly.yml  release.yml
crates/zugluft-app/: Cargo.toml  build.rs  zugluft.rc
crates/zugluft-app/src/: assets.rs  client.rs  elevation.rs  main.rs  tray.rs  winutil.rs
crates/zugluft-app/src/config/: mod.rs  store.rs  window.rs
crates/zugluft-app/src/ui/: appearance.rs  chrome.rs  controls.rs  curve_draw.rs  curve_helpers.rs  curve_panel.rs  curve_ui.rs  curves.rs  custom_ui.rs  dashboard.rs  editing.rs  fan_card.rs  fans.rs  graph.rs  management.rs  mod.rs  sensor_panel.rs  sensors.rs  settings_view.rs  tuning.rs  types.rs
crates/zugluft-cli/: Cargo.toml  zugluft.rc
crates/zugluft-cli/src/: baseline.rs  direct.rs  main.rs  service.rs
crates/zugluft-hw/: Cargo.toml  build.rs
crates/zugluft-hw/lhm-bridge/: zugluft-lhm-bridge.csproj
crates/zugluft-hw/lhm-bridge/src/: Bridge.cs
crates/zugluft-hw/src/: error.rs  ffi.rs  lib.rs
crates/zugluft-ipc/: Cargo.toml
crates/zugluft-ipc/src/: lib.rs  pipe.rs
crates/zugluft-service/: Cargo.toml  build.rs
crates/zugluft-service/src/: calibration.rs  curves.rs  custom.rs  hub.rs  main.rs  manual.rs  server.rs  settings.rs
crates/zugluft-service/src/worker/: calibrate.rs  duty.rs  mod.rs  publish.rs
installer/: zugluft.nsi
scripts/: package-windows.ps1  rebuild-and-relaunch.ps1  stamp-release-version.ps1
