[workspace]
resolver = "2"
members = [
    "crates/zugluft-hw",
    "crates/zugluft-ipc",
    "crates/zugluft-service",
    "crates/zugluft-cli",
    "crates/zugluft-app",
]

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
zugluft-hw = { path = "crates/zugluft-hw" }
zugluft-ipc = { path = "crates/zugluft-ipc" }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
