[package]
name = "zugluft-app"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "zugluft"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gpui = "0.2.2"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
toml_edit = "0.23"
zugluft-ipc.workspace = true
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "3.0.9"
