[package]
name = "zugluft-cli"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "zugluftctl"
path = "src/main.rs"

[dependencies]
zugluft-hw.workspace = true
zugluft-ipc = { version = "0.1.0", path = "../zugluft-ipc" }

[build-dependencies]
embed-resource = "3.0.9"
