[package]
name = "zugluft-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_System_IO", "Win32_System_Pipes", "Win32_Storage_FileSystem"] }
