[package]
name = "zugluft-service"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "zugluft-service"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
windows-service = "0.8.1"
zugluft-hw.workspace = true
zugluft-ipc.workspace = true

[build-dependencies]
embed-resource = "3.0.9"
